JP-7264 - [BE] Develop Remove device group